Rapid Prd/src/objects/Record_Access_Log__c.object
<CustomObject>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewed_By_Id__c</fullName>
        <label>Viewed By Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewed_By__c</fullName>
        <label>Viewed By</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Record Access Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Viewed_By__c</columns>
        <columns>IP_Address__c</columns>
        <columns>Object__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Access Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>